# servant-multipart

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  cabal.ghcjs.project  cabal.haskell-ci  cabal.make-travis-yml  cabal.project  servant-multipart.cabal  stack.yaml
.github/workflows/: ghcjs.yml  haskell-ci.yml
exe/: Upload.hs
servant-multipart/: CHANGELOG.md  servant-multipart.cabal
servant-multipart-api/: CHANGELOG.md  servant-multipart-api.cabal
servant-multipart-api/src/Servant/Multipart/: API.hs
servant-multipart-client/: CHANGELOG.md  servant-multipart-client.cabal
servant-multipart-client/exe/: Server.hs  Upload.hs
servant-multipart-client/src/Servant/Multipart/: Client.hs
servant-multipart/exe/: Upload.hs
servant-multipart/src/Servant/: Multipart.hs
src/Servant/: Multipart.hs
src/Servant/Multipart/: Internal.hs
test/: Test.hs
