name:                servant-multipart
version:             0.1
synopsis:            multipart/form-data (e.g file upload) support for servant
description:         Please see README.md
homepage:            https://github.com/alpmestan/servant-multipart#readme
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2016 Alp Mestanogullari
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Multipart
  build-depends:
                base >= 4.7 && < 5,
                bytestring,
                directory,
                http-media,
                resourcet,
                servant >=0.10 && <0.11,
                servant-server >=0.10 && <0.11,
                text,
                wai,
                wai-extra
  default-language:    Haskell2010

executable upload
  hs-source-dirs:      exe
  main-is:             Upload.hs
  build-depends:
                base,
                http-client,
                network,
                servant,
                servant-multipart,
                servant-server,
                text,
                warp,
                wai

source-repository head
  type:     git
  location: https://github.com/alpmestan/servant-multipart
