name:                servant-multipart
version:             0.11.2
synopsis:            multipart/form-data (e.g file upload) support for servant
description:
  This package adds support for file upload to the servant ecosystem. It draws
  on ideas and code from several people who participated in the (in)famous
  [ticket #133](https://github.com/haskell-servant/servant/issues/133) on
  servant's issue tracker.
homepage:            https://github.com/haskell-servant/servant-multipart#readme
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          alpmestan@gmail.com
copyright:           2016-2017 Alp Mestanogullari
category:            Web, Servant
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  CHANGELOG.md
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.3

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Multipart
  build-depends:
                base >= 4.7 && < 5,
                bytestring >= 0.10 && <0.11,
                directory,
                http-media >= 0.6 && <0.8,
                lens >= 4.0 && < 4.17,
                resourcet >=1.1 && <1.3,
                servant >=0.10 && <0.15,
                servant-docs >=0.10 && <0.15,
                servant-server >=0.10 && <0.15,
                text >=1.2 && <1.3,
                transformers >=0.3 && <0.6,
                wai >= 3.2 && <3.3,
                wai-extra >=3.0 && <3.1
  default-language:    Haskell2010

executable upload
  hs-source-dirs:      exe
  main-is:             Upload.hs
  default-language:    Haskell2010
  build-depends:
                base,
                http-client,
                bytestring,
                network,
                servant,
                servant-multipart,
                servant-server,
                text,
                transformers,
                warp,
                wai

source-repository head
  type:     git
  location: https://github.com/haskell-servent/servant-multipart
