name:               servant-multipart-api
version:            0.12.1
synopsis:           multipart/form-data (e.g file upload) support for servant
description:
  This package contains servant API types that support multiform upload, used by
  servant-multipart and servant-multipart-client for backend/client implementation.

homepage:           https://github.com/haskell-servant/servant-multipart#readme
license:            BSD3
license-file:       LICENSE
author:             Alp Mestanogullari
maintainer:         alpmestan@gmail.com
copyright:          2016-2017 Alp Mestanogullari, 2018-2019 Servant Contributors
category:           Web, Servant
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: CHANGELOG.md
tested-with: GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.4

library
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:  Servant.Multipart.API

  -- ghc boot libs
  build-depends:
      base          >=4.9      && <5
    , bytestring    >=0.10.8.1 && <0.11
    , text          >=1.2.3.0  && <1.3
    , transformers  >=0.5.2.0  && <0.6

  -- other dependencies
  build-depends:
      servant             >=0.16     && <0.19

source-repository head
  type:     git
  location: https://github.com/haskell-servant/servant-multipart
